Added Primary Tags in <head></head> Its Final Git Commit

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allison&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <meta name="title" content="Get your Participation Certificate, GDSC-JNEC">
+    <meta name="description" content="By Google Developers Students Club MGM's Jawaharlal Nehru Engineering College, Aurangabad-India"/>
+    <meta name="keywords" content="GDSC, GDSC-JNEC, Certificate, Google Developers Students Club, MGMU, MGM, Jawaharlal Nehru Engineering College, MGM-JNEC, GDSC-MGMU, GDSC-INDIA, MGM University"/>
     <title>GDSC JNEC</title>
   </head>
   <body>
