Custmizations according to code crusaders

--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Allison&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Oregano&display=swap" rel="stylesheet">
     <meta name="title" content="Get your Participation Certificate, GDSC-JNEC">
     <meta name="description" content="By Google Developers Students Club MGM's Jawaharlal Nehru Engineering College, Aurangabad-India"/>
     <meta name="keywords" content="GDSC, GDSC-JNEC, Certificate, Google Developers Students Club, MGMU, MGM, Jawaharlal Nehru Engineering College, MGM-JNEC, GDSC-MGMU, GDSC-INDIA, MGM University"/>
